--- a/data/templates/default/frames.html.tmpl
+++ b/data/templates/default/frames.html.tmpl
@@ -11,6 +11,7 @@
 		<meta name="copyright"   content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
 		<meta name="description" content="" />
 		<meta name="keywords"    content="" />
+		<link rel="icon" href="docperl.png" type="image/png" />
 		<style type="text/css">
 		</style>
 		<script type="text/javascript">
@@ -23,7 +24,7 @@
 					if ( frames[i].name == main && frames[i].document.title )
 						module = frames[i].document.title;
 				}
-				
+
 				if ( show == 'perl' ) {
 					document.title = 'DocPerl' + ' ' + module;
 					show = 'docperl';
